--- a/flask_MPC/templates/AI_TRAIN.html
+++ b/flask_MPC/templates/AI_TRAIN.html
@@ -54,11 +54,9 @@
                                     </label>
                                 </div>
                                 <div class="form-check abc-radio abc-radio-info ">
-                                    <input class="form-check-input" type="radio" name="radio1" id="radio3" value="transfusion">
+                                    <input class="form-check-input" type="radio" name="radio1" id="radio3" value="NIMS">
                                     <label class="form-check-label" for="radio3">
-                                        <a href="https://archive.ics.uci.edu/ml/datasets/Blood+Transfusion+Service+Center">
-                                            <strong>UCI新竹献血站数据集：748*4</strong></a>
-                                        <small class="text-muted">（正向样本：178 负向样本：570）</small>
+                                            <strong>NIMS钢测试数据集：360*16</strong>
                                     </label>
                                 </div>
                             </div>
@@ -69,7 +67,7 @@
                             请选择训练算法
                         </legend>
                         <p>
-                            共有两种分类数据集可供选择
+                            共有两种分类算法可供选择
                         </p>
                         <div class="row">
                             <div class="col-sm-8">
