--- a/flask_MPC/templates/AI_TRAIN_SCORE.html
+++ b/flask_MPC/templates/AI_TRAIN_SCORE.html
@@ -49,14 +49,14 @@
             </thead>
             <tbody>
                 <tr>
-                    <th scope="row">0</th>
+                    <th scope="row">false</th>
                     <td>{{ class_report['0']['precision'] }}</td>
                     <td>{{ class_report['0']['recall'] }}</td>
                     <td>{{ class_report['0']['f1-score'] }}</td>
                     <td>{{ class_report['0']['support'] }}</td>
                 </tr>
                 <tr>
-                    <th scope="row">1</th>
+                    <th scope="row">true</th>
                     <td>{{ class_report['1']['precision'] }}</td>
                     <td>{{ class_report['1']['recall'] }}</td>
                     <td>{{ class_report['1']['f1-score'] }}</td>
