--- a/flask_MPC/templates/AI_INDEX.html
+++ b/flask_MPC/templates/AI_INDEX.html
@@ -15,7 +15,7 @@
             <hr class="div1">
             <p><strong>可选同态加密算法：</strong>  Paillier（加同态）、CKKS（完全同态）</p>
             <p><strong>可选训练模型：</strong>  逻辑回归（LR)，支持向量机（SVM）</p>
-            <p><strong>可选数据集：</strong>  UCI乳腺癌诊断数据集，UCI心脏病诊断数据集，UCI台湾新竹献血数据集</p>
+            <p><strong>可选数据集：</strong>  UCI乳腺癌诊断数据集，UCI心脏病诊断数据集，NIMS钢测试数据集</p>
 
         </div>
     </div>
@@ -30,7 +30,7 @@
 
           <div class="btn-group-justified list-unstyled mt-3 mb-4" role="group">
               <a href="{{ url_for('back_train') }}" class="btn btn-outline-primary btn-xl"role="button">进行训练</a>
-              <a href="#" class="btn btn-outline-primary btn-xl"role="button">显示训练结果</a>
+              <a href="{{ url_for('train_score') }}" class="btn btn-outline-primary btn-xl"role="button">显示训练结果</a>
           </div>
       </div>
     </div>
@@ -42,8 +42,8 @@
         <h4 class="card-title pricing-card-title"><small >可进行以下操作:</small></h4>
 
           <div class="btn-group-justified list-unstyled mt-3 mb-4" role="group">
-              <a href="{{ url_for('back_test') }}" class="btn btn-outline-primary btn-xl"role="button">后台数据</a>
-              <a href="#" class="btn btn-outline-primary btn-xl"role="button">自定义数据</a>
+              <a href="{{ url_for('back_test') }}" class="btn btn-outline-primary btn-xl"role="button">后台数据测试</a>
+              <a href="{{ url_for('show_test') }}" class="btn btn-outline-primary btn-xl"role="button">显示加密测试结果</a>
           </div>
       </div>
     </div>
