--- a/flask_MPC/templates/AI_TRAIN_SHOW.html
+++ b/flask_MPC/templates/AI_TRAIN_SHOW.html
@@ -158,15 +158,15 @@
             <tbody>
                 <tr>
                     <th scope="row">逻辑回归</th>
-                    <td>0.018s</td>
-                    <td>0.016s</td>
-                    <td>0.016s</td>
+                    <td>0.070s</td>
+                    <td>0.066s</td>
+                    <td>0.054s</td>
                 </tr>
                 <tr>
                     <th scope="row">支持向量机</th>
-                    <td>0.015s</td>
-                    <td>0.015s</td>
-                    <td>0.03s</td>
+                    <td>0.023s</td>
+                    <td>0.023s</td>
+                    <td>0.016s</td>
                 </tr>
             </tbody>
         </table>
@@ -181,15 +181,15 @@
             <tbody>
                 <tr>
                     <th scope="row">逻辑回归</th>
-                    <td>97.368%</td>
-                    <td>85.246%</td>
-                    <td>76.000%</td>
+                    <td>97.98%</td>
+                    <td>83.93%</td>
+                    <td>90.56%</td>
                 </tr>
                 <tr>
                     <th scope="row">支持向量机</th>
-                    <td>95.614%</td>
-                    <td>86.885%</td>
-                    <td>75.333%</td>
+                    <td>96.84%</td>
+                    <td>84.59%</td>
+                    <td>90.56%</td>
                 </tr>
             </tbody>
         </table>
@@ -204,20 +204,20 @@
             <tbody>
                 <tr>
                     <th scope="row">逻辑回归</th>
-                    <td>0.026</td>
-                    <td>0.146</td>
-                    <td>0.24</td>
+                    <td>0.020</td>
+                    <td>0.161</td>
+                    <td>0.094</td>
                 </tr>
                 <tr>
                     <th scope="row">支持向量机</th>
-                    <td>0.044</td>
-                    <td>0.131</td>
-                    <td>0.247</td>
+                    <td>0.032</td>
+                    <td>0.154</td>
+                    <td>0.094</td>
                 </tr>
             </tbody>
         </table>
     <br><br>
-        <h5 style="text-align: center;font-weight: bold">R方</h5>
+        <h5 style="text-align: center;font-weight: bold">R方差</h5>
         <table class="table table-hover table-bordered">
             <thead>
                 <tr>
@@ -227,15 +227,15 @@
             <tbody>
                 <tr>
                     <th scope="row">逻辑回归</th>
-                    <td>0.888</td>
-                    <td>0.408</td>
-                    <td>-0.292</td>
+                    <td>0.912</td>
+                    <td>0.342</td>
+                    <td>0.599</td>
                 </tr>
                 <tr>
                     <th scope="row">支持向量机</th>
-                    <td>0.813</td>
-                    <td>0.474</td>
-                    <td>-0.327</td>
+                    <td>0.863</td>
+                    <td>0.369</td>
+                    <td>0.598</td>
                 </tr>
             </tbody>
         </table>
