--- a/flask_MPC/templates/AI_TEST_BACK.html
+++ b/flask_MPC/templates/AI_TEST_BACK.html
@@ -36,7 +36,7 @@
                         </p>
                         <div class="row" style="padding-left: 1rem">
                         <div class="form-check abc-radio abc-radio-info form-check-inline">
-                                    <input class="form-check-input" type="radio" name="radio1" id="radio1" value="pai" checked>
+                                    <input class="form-check-input" type="radio" name="radio1" id="radio1" value="Paillier" checked>
                                     <label class="form-check-label" for="radio1">
                                         <a href="https://www.cae.tntech.edu/~mmahmoud/teaching_files/grad/ECE7970/S16/slides/Homomorphic_basics.pdf">
                                             <strong>Paillier算法 </strong>
@@ -45,7 +45,7 @@
                                     </label>
                                 </div>
                                 <div class="form-check abc-radio abc-radio-info form-check-inline">
-                                    <input class="form-check-input" type="radio" name="radio1" id="radio2" value="ckks">
+                                    <input class="form-check-input" type="radio" name="radio1" id="radio2" value="CKKS">
                                     <label class="form-check-label" for="radio2">
                                         <a href="https://eprint.iacr.org/2016/421.pdf">
                                             <strong>CKKS算法 </strong>
@@ -88,8 +88,7 @@
                                 <div class="form-check abc-radio abc-radio-info ">
                                     <input class="form-check-input" type="radio" name="radio2" id="radio5" value="NIMS">
                                     <label class="form-check-label" for="radio5">
-                                        <a href="https://archive.ics.uci.edu/ml/datasets/Blood+Transfusion+Service+Center">
-                                            <strong>NIMS钢测试数据集：748*4</strong></a>
+                                        <strong>NIMS钢测试数据集：360*16</strong>
                                     </label>
                                 </div>
                             </div>
@@ -97,10 +96,10 @@
                     </fieldset>
                     <fieldset>
                         <legend>
-                            请选择训练算法
+                            请选择现有模型
                         </legend>
                         <p>
-                            共有两种分类数据集可供选择
+                            共有两种算法生成的模型可供选择
                         </p>
                         <div class="row">
                             <div class="col-sm-8">
