--- a/flask_MPC/templates/AI_TEST_SHOW.html
+++ b/flask_MPC/templates/AI_TEST_SHOW.html
@@ -17,55 +17,55 @@
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_conf_matrix_ENC.jpg">
-                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_conf_matrix_ENC.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_conf_matrix_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_conf_matrix_Paillier.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
-                                <div class="project-name">LR模型×乳腺癌数据集</div>
+                                <div class="project-name">Paillier×LR模型×乳腺癌数据集</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_conf_matrix_ENC.jpg">
-                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_conf_matrix_ENC.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_conf_matrix_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_conf_matrix_Paillier.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
-                                <div class="project-name">SVM模型×乳腺癌数据集</div>
+                                <div class="project-name">Paillier×SVM模型×乳腺癌数据集</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_ROC_curve_ENC.jpg">
-                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_ROC_curve_ENC.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_conf_matrix_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_conf_matrix_CKKS.svg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">ROC曲线</div>
-                                <div class="project-name">LR模型×乳腺癌数据集</div>
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×LR模型×乳腺癌数据集</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_ROC_curve_ENC.jpg">
-                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_ROC_curve_ENC.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_conf_matrix_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_conf_matrix_CKKS.svg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">ROC曲线</div>
-                                <div class="project-name">SVM模型×乳腺癌数据集</div>
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×SVM模型×乳腺癌数据集</div>
                             </div>
                         </a>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/heart/LR_conf_matrix_ENC.jpg">
-                            <img class="img-fluid" src="../static/result_images/heart/LR_conf_matrix_ENC.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/heart/LR_conf_matrix_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/LR_conf_matrix_Paillier.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
-                                <div class="project-name">LR模型×心脏病数据集</div>
+                                <div class="project-name">Paillier×LR模型×心脏病数据集</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/heart/SVM_conf_matrix_ENC.jpg">
-                            <img class="img-fluid" src="../static/result_images/heart/SVM_conf_matrix_ENC.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/heart/SVM_conf_matrix_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/SVM_conf_matrix_Paillier.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
                                 <div class="project-name">SVM模型×心脏病数据集</div>
@@ -73,20 +73,172 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/heart/LR_ROC_curve_ENC.jpg">
-                            <img class="img-fluid" src="../static/result_images/heart/LR_ROC_curve_ENC.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/heart/LR_conf_matrix_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/LR_conf_matrix_CKKS.svg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">ROC曲线</div>
-                                <div class="project-name">LR模型×心脏病数据集</div>
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×LR模型×心脏病数据集</div>
                             </div>
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/heart/SVM_ROC_curve_ENC.jpg">
-                            <img class="img-fluid" src="../static/result_images/heart/SVM_ROC_curve_ENC.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/heart/SVM_conf_matrix_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/SVM_conf_matrix_CKKS.svg" alt="" />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">ROC曲线</div>
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×SVM模型×心脏病数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/NIMS/LR_conf_matrix_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/LR_conf_matrix_Paillier.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">Paillier×LR模型×NIMS数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/NIMS/SVM_conf_matrix_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/SVM_conf_matrix_Paillier.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">SVM模型×NIMS数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/NIMS/LR_conf_matrix_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/LR_conf_matrix_CKKS.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×LR模型×NIMS数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/NIMS/SVM_conf_matrix_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/SVM_conf_matrix_CKKS.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×SVM模型×NIMS数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_ROC_curve_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_ROC_curve_Paillier.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">Paillier×LR模型×乳腺癌数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_ROC_curve_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_ROC_curve_Paillier.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">Paillier×SVM模型×乳腺癌数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_ROC_curve_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_ROC_curve_CKKS.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×LR模型×乳腺癌数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_ROC_curve_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_ROC_curve_CKKS.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×SVM模型×乳腺癌数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/heart/LR_ROC_curve_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/LR_ROC_curve_Paillier.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">Paillier×LR模型×心脏病数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/heart/SVM_ROC_curve_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/SVM_ROC_curve_Paillier.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
                                 <div class="project-name">SVM模型×心脏病数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/heart/LR_ROC_curve_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/LR_ROC_curve_CKKS.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×LR模型×心脏病数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/heart/SVM_ROC_curve_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/SVM_ROC_curve_CKKS.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×SVM模型×心脏病数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="row no-gutters">
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/NIMS/LR_ROC_curve_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/LR_ROC_curve_Paillier.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">Paillier×LR模型×NIMS数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/NIMS/SVM_ROC_curve_Paillier.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/SVM_ROC_curve_Paillier.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">SVM模型×NIMS数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/NIMS/LR_ROC_curve_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/LR_ROC_curve_CKKS.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×LR模型×NIMS数据集</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-3 col-sm-6">
+                        <a class="portfolio-box" href="../static/result_images/NIMS/SVM_ROC_curve_CKKS.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/SVM_ROC_curve_CKKS.svg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">混淆矩阵</div>
+                                <div class="project-name">CKKS×SVM模型×NIMS数据集</div>
                             </div>
                         </a>
                     </div>
