--- a/flask_MPC/templates/basic_template.html
+++ b/flask_MPC/templates/basic_template.html
@@ -60,7 +60,7 @@
                     </button>
                 </div>
                 <div class="modal-title">
-                    <h5 class="text-center">请输入创建人验证码</h5>
+                    <h5 class="text-center">请输入创建人验证码进行重置</h5>
                 </div>
                 <div class="modal-body">
                     <form class="form-group">
@@ -87,7 +87,7 @@
                     </button>
                 </div>
                 <div class="modal-title">
-                    <h5 class="text-center">请输入创建人验证码</h5>
+                    <h5 class="text-center">请输入创建人验证码进行数据模拟</h5>
                 </div>
                 <div class="modal-body">
                     <form class="form-group">
