--- a/flask_MPC/templates/basic_template_1.html
+++ b/flask_MPC/templates/basic_template_1.html
@@ -48,7 +48,7 @@
           role="button" aria-haspopup="true" aria-expanded="false">双方安全验证 <span class="caret"></span></a>
             <ul class="dropdown-menu">
             <li><a href="{{ url_for('back_test') }}" class="dropdown-item">后台数据</a></li>
-            <li><a href="#" class="dropdown-item">显示验证结果</a></li>
+            <li><a href="{{ url_for('show_test') }}" class="dropdown-item">显示验证结果</a></li>
             </ul>
         </li>
       </ul>
