--- a/flask_MPC/templates/AI_TRAIN_SHOW.html
+++ b/flask_MPC/templates/AI_TRAIN_SHOW.html
@@ -17,8 +17,8 @@
             <div class="container-fluid p-0">
                 <div class="row no-gutters">
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_conf_matrix_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_conf_matrix_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_conf_matrix_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_conf_matrix_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
                                 <div class="project-name">LR模型×乳腺癌数据集</div>
@@ -26,8 +26,8 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_ROC_curve_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_ROC_curve_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/LR_ROC_curve_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/LR_ROC_curve_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">ROC曲线</div>
                                 <div class="project-name">LR模型×乳腺癌数据集</div>
@@ -35,8 +35,8 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_conf_matrix_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_conf_matrix_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_conf_matrix_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_conf_matrix_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
                                 <div class="project-name">SVM模型×乳腺癌数据集</div>
@@ -45,8 +45,8 @@
                     </div>
 
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_ROC_curve_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_ROC_curve_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/breast_cancer/SVM_ROC_curve_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/breast_cancer/SVM_ROC_curve_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">ROC曲线</div>
                                 <div class="project-name">SVM模型×乳腺癌数据集</div>
@@ -56,8 +56,8 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/heart/LR_conf_matrix_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/heart/LR_conf_matrix_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/heart/LR_conf_matrix_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/LR_conf_matrix_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
                                 <div class="project-name">LR模型×心脏病数据集</div>
@@ -65,8 +65,8 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/heart/LR_ROC_curve_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/heart/LR_ROC_curve_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/heart/LR_ROC_curve_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/LR_ROC_curve_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">ROC曲线</div>
                                 <div class="project-name">LR模型×心脏病数据集</div>
@@ -74,8 +74,8 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/heart/SVM_conf_matrix_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/heart/SVM_conf_matrix_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/heart/SVM_conf_matrix_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/SVM_conf_matrix_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
                                 <div class="project-name">SVM模型×心脏病数据集</div>
@@ -83,8 +83,8 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/heart/SVM_ROC_curve_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/heart/SVM_ROC_curve_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/heart/SVM_ROC_curve_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/heart/SVM_ROC_curve_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">ROC曲线</div>
                                 <div class="project-name">SVM模型×心脏病数据集</div>
@@ -94,8 +94,8 @@
                 </div>
                 <div class="row no-gutters">
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/NIMS/LR_conf_matrix_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/NIMS/LR_conf_matrix_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/NIMS/LR_conf_matrix_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/LR_conf_matrix_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
                                 <div class="project-name">LR模型×NIMS数据集</div>
@@ -103,8 +103,8 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/NIMS/LR_ROC_curve_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/NIMS/LR_ROC_curve_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/NIMS/LR_ROC_curve_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/LR_ROC_curve_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">ROC曲线</div>
                                 <div class="project-name">LR模型×NIMS数据集</div>
@@ -112,8 +112,8 @@
                         </a>
                     </div>
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/NIMS/SVM_conf_matrix_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/NIMS/SVM_conf_matrix_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/NIMS/SVM_conf_matrix_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/SVM_conf_matrix_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">混淆矩阵</div>
                                 <div class="project-name">SVM模型×NIMS数据集</div>
@@ -122,8 +122,8 @@
                     </div>
 
                     <div class="col-lg-3 col-sm-6">
-                        <a class="portfolio-box" href="../static/result_images/NIMS/SVM_ROC_curve_RAW.jpg">
-                            <img class="img-fluid" src="../static/result_images/NIMS/SVM_ROC_curve_RAW.jpg" alt="" />
+                        <a class="portfolio-box" href="../static/result_images/NIMS/SVM_ROC_curve_RAW.svg">
+                            <img class="img-fluid" src="../static/result_images/NIMS/SVM_ROC_curve_RAW.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">ROC曲线</div>
                                 <div class="project-name">SVM模型×乳腺癌数据集</div>
@@ -134,7 +134,7 @@
                 <div class="row no-gutters">
                     <div class="col-lg-12 col-sm-6">
                         <a class="portfolio-box" href="../static/result_images/ALL_ROC_Curve.jpg">
-                            <img class="img-fluid" src="../static/result_images/ALL_ROC_Curve.jpg" alt="" />
+                            <img class="img-fluid" src="../static/result_images/ALL_ROC_Curve.svg" alt="" />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">全部ROC曲线对比</div>
                                 <div class="project-name">LR/SVM模型×乳腺癌/心脏病/NIMS数据集</div>
